Fix: set base path for GitHub Pages

--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="theme-color" content="#333333">
 
-	<link rel="manifest" href="/manifest.json">
-	<link rel="icon" type="image/png" href="/favicon.png">
+	<link rel="manifest" href="/svelte-toolkit-docs/manifest.json">
+	<link rel="icon" type="image/png" href="/svelte-toolkit-docs/favicon.png">
 
 	%svelte.head%
 </head>
